app-boot-queries-fix.log

> Task :compileJava FAILED
/Users/jose.barros.br/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/controller/OrganizationController.java:81: error: cannot find symbol
        response.setEmploymentContractsList(buildEmploymentContractsResponse(id));
                ^
  symbol:   method setEmploymentContractsList(List<EmploymentContractResponse>)
  location: variable response of type OrganizationResponse
/Users/jose.barros.br/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/controller/OrganizationController.java:82: error: cannot find symbol
        response.setServiceContractsList(buildServiceContractsResponse(id));
                ^
  symbol:   method setServiceContractsList(List<ContractResponse>)
  location: variable response of type OrganizationResponse
/Users/jose.barros.br/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/controller/OrganizationController.java:94: error: cannot find symbol
        response.setEmploymentContractsList(buildEmploymentContractsResponse(organization.getId()));
                ^
  symbol:   method setEmploymentContractsList(List<EmploymentContractResponse>)
  location: variable response of type OrganizationResponse
/Users/jose.barros.br/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/controller/OrganizationController.java:95: error: cannot find symbol
        response.setServiceContractsList(buildServiceContractsResponse(organization.getId()));
                ^
  symbol:   method setServiceContractsList(List<ContractResponse>)
  location: variable response of type OrganizationResponse
4 errors

[Incubating] Problems report is available at: file:///Users/jose.barros.br/Documents/projects/mvt-events/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /Users/jose.barros.br/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/controller/OrganizationController.java:81: error: cannot find symbol
          response.setEmploymentContractsList(buildEmploymentContractsResponse(id));
                  ^
    symbol:   method setEmploymentContractsList(List<EmploymentContractResponse>)
    location: variable response of type OrganizationResponse
  /Users/jose.barros.br/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/controller/OrganizationController.java:82: error: cannot find symbol
          response.setServiceContractsList(buildServiceContractsResponse(id));
                  ^
    symbol:   method setServiceContractsList(List<ContractResponse>)
    location: variable response of type OrganizationResponse
  /Users/jose.barros.br/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/controller/OrganizationController.java:94: error: cannot find symbol
          response.setEmploymentContractsList(buildEmploymentContractsResponse(organization.getId()));
                  ^
    symbol:   method setEmploymentContractsList(List<EmploymentContractResponse>)
    location: variable response of type OrganizationResponse
  /Users/jose.barros.br/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/controller/OrganizationController.java:95: error: cannot find symbol
          response.setServiceContractsList(buildServiceContractsResponse(organization.getId()));
                  ^
    symbol:   method setServiceContractsList(List<ContractResponse>)
    location: variable response of type OrganizationResponse
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
1 actionable task: 1 executed
